--- a/Linux命令/基礎命令.md
+++ b/Linux命令/基礎命令.md
@@ -3,17 +3,17 @@
 目錄清單 ```ls```  
 目錄清單，包含隱藏目錄 ```ls -al```  
 家目錄的路徑 ```echo ~```   
-目前所在的工作目錄 pwd   
-前往根目錄 cd /   
-單引號只是單純的字串，雙引號可把命令讀出來 echo "HELLO $USER"   
+目前所在的工作目錄 ```pwd```   
+前往根目錄 ```cd /```   
+單引號只是單純的字串，雙引號可把命令讀出來 ```echo "HELLO $USER"```   
 who指令 -l(清單)-H(標題)-m(當前使用者)-q(簡易顯示)   
-切換帳號 su ybean(帳號)   
-更改權限帳號 sudo nano /etc/sudoers  
-%myring ALL=(ALL:ALL) NOPASSWD:ALL 把在myring資料夾的帳號設成有SUDO權限而且免密碼  
-更改時區(台灣) sudo timedatectl set-timezone Asia/Taipei   
-增加mysh.sh檔案的可執行權限(全部人) chmod +x ./mysh.sh  
-**檔案權限RWX分別代表4、2、1，例如 chmod 744 test.ing 代表自己權限最高，其他人只有R權限**
-改變tesiting資料夾的使用者變成rbean  sudo chown rbean testing/  
+切換帳號 ```su ybean(帳號)```   
+更改權限帳號 ```sudo nano /etc/sudoers```  
+把在myring資料夾的帳號設成有SUDO權限而且免密碼 ```%myring ALL=(ALL:ALL) NOPASSWD:ALL```   
+更改時區(台灣) ```sudo timedatectl set-timezone Asia/Taipei```   
+增加mysh.sh檔案的可執行權限(全部人) ```chmod +x ./mysh.sh```  
+**(檔案權限RWX分別代表4、2、1，例如 chmod 744 test.ing 代表自己權限最高，其他人只有R權限)**   
+改變tesiting資料夾的使用者變成rbean ```sudo chown rbean testing/```  
 
 
 **帳號管理(ubuntu)**
@@ -41,10 +41,11 @@ scp katana1791@35.234.58.75:/home/katana1791/c.txt ./ 把c.txt傳回本機目前
 
 **公私鑰發放**
 ==
-發公鑰跟私鑰在自己的家目錄裡面的.ssh ssh-keygen -t rsa -P ''   
-把公鑰給tasuke02 ssh-copy-id tasuke@192.168.85.24  
-編輯hosts檔連結IP位子跟名稱  sudo nano /etc/hosts
-不登入主機查看資料 ssh tasuke@192.168.85.24 -p 22 ls -al (ssh本來就走22 port，不加沒差)
+發公鑰跟私鑰在自己的家目錄裡面的.ssh ```ssh-keygen -t rsa -P ''```   
+把公鑰給tasuke02 ```ssh-copy-id tasuke@192.168.85.24```  
+編輯hosts檔連結IP位子跟名稱  ```sudo nano /etc/hosts```
+不登入主機查看資料 ```ssh tasuke@192.168.85.24 -p 22 ls -al```   
+(ssh本來就走22 port，不加沒差)
 
 
 
