--- a/Linux/基礎命令.md
+++ b/Linux/基礎命令.md
@@ -13,7 +13,13 @@ who指令 -l(清單)-H(標題)-m(當前使用者)-q(簡易顯示)
  ```sudo timedatectl set-timezone Asia/Taipei```   更改時區(台灣)  
  ```chmod +x ./mysh.sh```  增加mysh.sh檔案的可執行權限(全部人)   
 **(檔案權限RWX分別代表4、2、1，例如 chmod 744 test.ing 代表自己權限最高，其他人只有R權限)**     
- ```sudo chown rbean testing/```  改變tesiting資料夾的使用者變成rbean  
+ ```sudo chown rbean testing/```  改變tesiting資料夾的使用者變成rbean   
+`free -mh` 檢視電腦記憶體，-mh人性化檢視  
+`fmt -u` 格式化，減少空格調整格式  
+`df` 檢視硬碟資訊  
+`read -t5` 在五秒內輸入數字  
+`read -n2` 只能輸入2個字元，輸入2字元後自動輸出  
+`ping -c 4 -w 1` 回應4筆就好，超過1秒就不要了  
 
 
 **帳號管理(ubuntu)**
