--- a/Linux/基礎命令.md
+++ b/Linux/基礎命令.md
@@ -20,7 +20,19 @@ who指令 -l(清單)-H(標題)-m(當前使用者)-q(簡易顯示)
 `read -t5` 在五秒內輸入數字  
 `read -n2` 只能輸入2個字元，輸入2字元後自動輸出  
 `ping -c 4 -w 1` 回應4筆就好，超過1秒就不要了  
+`((數字+數字)) $((變數+數字))`  可做數學運算
+`$0$1$2$3$4` $0是執行程式本身，其他是在執行程式時後面附加上去才會套入內容的變數
+`pw=%(cat word)` 變數等於別的文字本身，可利用於密碼 
 
+**grep**
+==
+`grep ^0.0.0.0` 抓取這一行的開頭的0.0.0.0  
+`grep -f 檔案 /etc/passwd`      在/etc/passwd裡面grep出檔案裡面的內容  
+`grep -c -f 檔案 /etc/passwd`   在/etc/passwd裡面grep出檔案裡面的內容，並告知幾筆  
+`grep -w JONE` 找尋完整單字JONE  
+`grep ^%` 抓空白列  
+`grep "a3a$"` 從尾端找a3a  
+`grep ^asd$`  找尋完全一樣的asd  
 
 **帳號管理(ubuntu)**
 ==
