--- a/Linux/基礎命令.md
+++ b/Linux/基礎命令.md
@@ -23,6 +23,8 @@ who指令 -l(清單)-H(標題)-m(當前使用者)-q(簡易顯示)
 `((數字+數字)) $((變數+數字))`  可做數學運算
 `$0$1$2$3$4` $0是執行程式本身，其他是在執行程式時後面附加上去才會套入內容的變數
 `pw=%(cat word)` 變數等於別的文字本身，可利用於密碼  
+PATH=$PATH:~ 設置家目錄在系統路徑裡(最後面)  
+PATH=~:$PATH 設置家目錄在系統路徑裡(最前面)  
 
 **grep**
 ==
@@ -66,7 +68,14 @@ scp katana1791@35.234.58.75:/home/katana1791/c.txt ./ 把c.txt傳回本機目前
 不登入主機查看資料 ```ssh tasuke@192.168.85.24 -p 22 ls -al```   
 (ssh本來就走22 port，不加沒差)
 
+**source、export**
+==
+source allfun 跟 .「空一格」allfun一樣 allfun為檔案名稱  
+把另一個檔案內的資料搬過來使用  
 
+export kk=kkkkkk 可以把指定的變數往下繼承(可配合source命令)  
+在提示號使用時可下傳到每個程式，除非在程式內使用export在往下蓋，  
+但一離開程式，則命令回歸到在提示號下過的(最上層)  
 
 
 
