--- a/Linux/基礎命令.md
+++ b/Linux/基礎命令.md
@@ -25,6 +25,7 @@ who指令 -l(清單)-H(標題)-m(當前使用者)-q(簡易顯示)
 `pw=%(cat word)` 變數等於別的文字本身，可利用於密碼  
 PATH=$PATH:~ 設置家目錄在系統路徑裡(最後面)  
 PATH=~:$PATH 設置家目錄在系統路徑裡(最前面)  
+[ "$USER" != "root" ] && exit  不是ROOT或是SUDO身分的話就無法執行程式  
 
 **grep**
 ==
@@ -49,6 +50,12 @@ PATH=~:$PATH 設置家目錄在系統路徑裡(最前面)
 把人踢下線: sudo pkill -kill -t  pts/1(用who指令查詢該帳號的pts為多少)  
 鎖密碼:sudo usermod -L ybean(帳號名)  
 解鎖密碼:sudo usermod -U ybean(帳號名)  
+
+echo boss:bbbb |sudo chpasswd  
+快速更改密碼，例:更改boss的密碼為bbbb  
+
+sudo chpasswd < pwlist  
+直接用pwlist內的內容導入進去chpasswd裡面的參數(一堆密碼，餵給他)  
 
 **SCP指令**
 ==
