--- a/Google Cloud Platform (GCP)/巢狀虛擬化.md
+++ b/Google Cloud Platform (GCP)/巢狀虛擬化.md
@@ -130,3 +130,119 @@ enter
 
 8.resize2fs /dev/sda3(看要操作的硬碟是哪一區)    
 擴充硬碟容量  
+
+**QEMU**
+==
+QEMU預設網卡E1000(INTEL 82540EM)  
+QEMU預設網路類型 USER  
+換網卡，在換網路類型 = 兩個-net  
+SLIRP 撥接網路，效能很差，一般情況不能PING  
+但是在LINUX有做好設定，KVM一樣可以PING  
+KVM無法直接對外上網  
+TAP 模擬網路第二層(通常用來建設網路橋接器) TUN模擬網路第三層  
+                             
+**自製 KVM 橋接網路**
+==
+1.sudo brctl addbr macsw  
+產生 bridge 網路裝置  
+
+2.sudo ifconfig macsw 172.16.20.254 netmask 255.255.255.0 up  
+設定 macsw 裝置的 IP  
+
+3.sudo tunctl -b -u ${USER} (輸入兩次)  
+產生二個 TAP 網路介面  
+
+4.sudo ifconfig tap0 up  sudo ifconfig tap0 up  
+啟動新建 TAP 網路裝置  
+
+5.sudo brctl addif macsw tap0   sudo brctl addif macsw tap0  
+將 TAP 網路介面連接至 Bridge 網路裝置  
+
+6.sudo brctl showmacs macsw   ifconfig macsw  
+檢視 macsw 網路裝置的 MAC 表格  
+
+7.sudo brctl showstp macsw  
+檢視 macsw 內部運作資訊  
+
+8.brctl show  
+顯示所有 bridge 網路裝置  
+
+9.sudo kvm -m 128 -cdrom iso/tcl.iso \  
+-net nic,macaddr=52:54:72:16:20:10 \  
+-net tap,ifname=tap0 -curses  
+啟動第一部 Client 虛擬電腦  
+
+10.sudo ifconfig eth0 172.16.20.10 \  
+netmask 255.255.255.0 up && \  
+sudo route add default gw 172.16.20.254 && \  
+echo 8.8.8.8 > /etc/resolv.conf  
+進入虛擬機後手動設定網路  
+[在 TCL 虛擬主機中設定]  
+
+11.第二部IP的10改11，tap0改tap1，然後第重複10步驟也更改IP  
+
+12.互PING  
+
+13.arp -n  
+「自製 KVM 橋接網路，DHCP」  
+
+14.sudo lsof -i :53  
+檢查 53 Port 被誰佔用  
+
+15.sudo systemctl stop systemd-resolved  
+sudo systemctl disable systemd-resolved  
+停止並停用 systemd-resolved  
+
+16.ls -al /etc/resolv.conf   
+查看 /etc/resolv.conf  
+
+17.sudo rm /etc/resolv.conf  
+刪除 /etc/resolv.conf  
+
+18.echo nameserver 8.8.8.8 | sudo tee /etc/resolv.conf  
+產生新的 /etc/resolv.conf  
+
+*******注意*******  
+刪除後，電腦無法解析自己的名稱，增加以下步驟  
+sudo nano /etc/hosts   
+在localhost後面新增自己的電腦名稱  
+
+
+19.sudo apt install dnsmasq  
+安裝 dnsmasq 套件  
+
+20.echo "  
+dhcp-range=172.16.20.150,172.16.20.160,24h  
+dhcp-option=option:netmask,255.255.255.0   
+dhcp-option=option:router,172.16.20.254  
+dhcp-option=option:dns-server,8.8.8.8  
+" | sudo tee -a /etc/dnsmasq.conf  
+編輯 dnsmasq 設定，在最下方加入下列內容  
+150~160的IP給你使用24小時，沒有續約就拿回來  
+
+21.sudo systemctl restart dnsmasq  
+重啟 dnsmasq  
+sudo systemctl status dnsmasq 觀看dnsmasq狀態，按Q離開  
+
+22.重啟TCL，同第10、11步驟  
+
+**透過 NAT 上網**  
+23.cat /proc/sys/net/ipv4/ip_forward  
+檢視是否開啟 IPv4 forwarding 功能  
+***0代表沒有開啟***  
+
+24.echo "1" | sudo tee /proc/sys/net/ipv4/ip_forward  
+開啟 IPv4 forwarding 功能  
+
+25.sudo iptables -t nat -A POSTROUTING -o ens4 -s 172.16.20.0/24 -j MASQUERADE  
+設定172.16.20.0往段可以透過ubuntu的網卡ens4上網，啟動 NAT  
+  
+**刪除橋接器網路**
+==
+1.sudo tunctl -d tap0(port名稱)  
+sudo tunctl -d tap1(port名稱)  
+刪除網卡  
+2.sudo ifconfig macsw (brige內建網卡名稱=brige名稱) down  
+網卡停掉、下線  
+3.sudo brctl delbr macsw(網卡名稱)  
+刪除橋接器  
