--- a/Linux/基礎電腦概論.md
+++ b/Linux/基礎電腦概論.md
@@ -9,3 +9,19 @@
 作業系統:OS: Redhat Linux 類Unix(企業使用比率高於WINDOWS),   
 IBM AIX(銀行界、很好、很貴), Windows Server  
 CPU:Intel® Xeon、AMD EPYC™  
+
+
+
+**終端機**
+==
+80年代的linux server用RS-232線路連出很多台終端機，
+終端機只有螢幕鍵盤，允許多人同時使用Shell貝殼程式
+(csh、bash、sh)對linux下達命令
+
+**其他**
+==
+libc.musl-x86_64.so.1
+C語言的資料庫，幫助我們與Linux kernel 溝通，
+Linux kernel是用來管理我們電腦的重要資源
+（CPU、網路卡、記憶體、硬碟等等）
+lib是library的英文簡稱，C是C語言
