--- a/Linux/基礎電腦概論.md
+++ b/Linux/基礎電腦概論.md
@@ -10,13 +10,29 @@
 IBM AIX(銀行界、很好、很貴), Windows Server  
 CPU:Intel® Xeon、AMD EPYC™  
 
-
-
 **終端機**
 ==
 80年代的linux server用RS-232線路連出很多台終端機，
 終端機只有螢幕鍵盤，允許多人同時使用Shell貝殼程式
 (csh、bash、sh)對linux下達命令
+
+**電腦語言翻譯**
+==
+interpreter(直譯式)  
+把輸入程式一行一行翻譯成電腦看得懂的機械碼做執行，  
+bash script就是其中一種  
+機械碼:電腦可以直接讀懂的一種格式的資料  
+
+Compiler (編譯式)  
+把程式一次翻譯完成，傳給電腦  
+速度比直譯式快  
+```
+直譯式:烤肉，烤一點吃一點，且戰且走
+編譯式:炒牛肉，一次炒一大盤吃爽爽
+```
+
+
+
 
 **其他**
 ==
