--- a/Linux/基礎電腦概論.md
+++ b/Linux/基礎電腦概論.md
@@ -31,13 +31,17 @@ Compiler (編譯式)
 編譯式:炒牛肉，一次炒一大盤吃爽爽
 ```
 
+**go語言**
+==
+C語言的速度，java的物件導向能力，python語言的簡潔，  
+套件比開發語言有名，使用go語言開發的有docker(Container技術)跟Kubernetes    
 
 
 
 **其他**
 ==
-libc.musl-x86_64.so.1
-C語言的資料庫，幫助我們與Linux kernel 溝通，
-Linux kernel是用來管理我們電腦的重要資源
-（CPU、網路卡、記憶體、硬碟等等）
-lib是library的英文簡稱，C是C語言
+libc.musl-x86_64.so.1  
+C語言的資料庫，幫助我們與Linux kernel 溝通，  
+Linux kernel是用來管理我們電腦的重要資源  
+（CPU、網路卡、記憶體、硬碟等等）  
+lib是library的英文簡稱，C是C語言  
