--- a/Linux/基礎電腦概論.md
+++ b/Linux/基礎電腦概論.md
@@ -36,6 +36,14 @@ Compiler (編譯式)
 C語言的速度，java的物件導向能力，python語言的簡潔，  
 套件比開發語言有名，使用go語言開發的有docker(Container技術)跟Kubernetes    
 
+**嘗試編輯機械碼檔案**
+==
+1.sudo apk add bvi  
+安裝bvi編輯器  
+2.bvi main  
+打開機械碼檔案  
+3.輸入:set memmove進入編輯模式(在bvi內無法複製貼上)  
+4.在想要編輯的地方按i即可進行編輯  
 
 
 **其他**
