--- a/Linux/基礎電腦概論.md
+++ b/Linux/基礎電腦概論.md
@@ -18,6 +18,10 @@ CPU:Intel® Xeon、AMD EPYC™
 
 **電腦語言翻譯**
 ==
+**source code跟Program**
+一般程式，人看得懂的，也就是 source code 程式碼
+當我們寫好指令，要透過編譯或直譯轉換成機器看得懂的機械碼，也就是Program(程式)。    
+
 interpreter(直譯式)  
 把輸入程式一行一行翻譯成電腦看得懂的機械碼做執行，  
 bash script就是其中一種  
@@ -30,7 +34,6 @@ Compiler (編譯式)
 直譯式:烤肉，烤一點吃一點，且戰且走
 編譯式:炒牛肉，一次炒一大盤吃爽爽
 ```
-
 
 **嘗試編輯機械碼檔案**
 ==
