--- a/Linux/基礎電腦概論.md
+++ b/Linux/基礎電腦概論.md
@@ -42,6 +42,22 @@ Compiler (編譯式)
 3.輸入:set memmove進入編輯模式(在bvi內無法複製貼上)  
 4.在想要編輯的地方按i即可進行編輯  
 
+**什麼是process?**
+==
+人去執行Program(程式)，之後程式就會被載入記憶體，  
+cpu開始工作，載入記憶體的資料有:  
+1.pid(程序id)  
+2.執行者  
+3.source code(程式碼)  
+當program變成process 代表佔用了電腦的記憶體、cpu  
+以上步驟稱為process(程序)  
+
+linux:root、daemon  
+daemon:一開機就一直在背景執行的  
+windows :service  
+
+**顯示程序資訊**  
+
 
 **其他**
 ==
