--- a/中信安/教育訓練1.md
+++ b/中信安/教育訓練1.md
@@ -61,7 +61,7 @@ IPV6_AUTOCONF=no
 #Port 22
 Port 22222
 (port 22 可先刪除註解避免修改錯誤無法登入、增加空port 22222)
-(scp 也走22port)
+(注意，scp 也走22port)
 3.nano /etc/sysconfig/selinux
 4.修改SELINUX=enforcing
 為SELINUX=disabled
@@ -116,37 +116,37 @@ UUID="9883586d-12d1-4254-b431-ab40496bc985" /opt xfs defaults 0 0
 
 ```
 
-- [ ] 新增使用者並使用亂數密碼，UID、GID 固定為 1005，有 sudo 權限、並使用金鑰驗證登入、指定 root 密碼為 `password`
+- [x] 新增使用者並使用亂數密碼，UID、GID 固定為 1005，有 sudo 權限、並使用金鑰驗證登入、指定 root 密碼為 `password`
 
 ```操作過程寫在這邊
 (mkpasswd、pwgen)
-6.groupadd -g 1005 bigred
+1.groupadd -g 1005 bigred
 先新增bigred群組並給予gid為1005
-1.adduser bigred -u 1005 -g 1005
+2.adduser bigred -u 1005 -g 1005
 新增名為bigred的使用者，並指定uid跟gid為1005
 2.passwd bigred
 給bigred密碼
 3.使用keeppass的工具製作出20個字元的大小寫英文數字組合
 S9yFoRCSBDTixqoqtcG3
 4.再次輸入密碼
-7.cat /etc/passwd | grep "bigred"
+5.cat /etc/passwd | grep "bigred"
 檢查是否更改成功
-8.usermod -G wheel bigred
+6.usermod -G wheel bigred
 把bigred加入擁有sudo權限的群組
-9.sudo nano /etc/sudoers
+7.sudo nano /etc/sudoers
 測試是否能成功開啟需要sudo權限才能開啟的文件
-10.nano /etc/ssh/sshd_config
-11.PubkeyAuthentication yes
+8.nano /etc/ssh/sshd_config
+9.PubkeyAuthentication yes
 允許使用公鑰登入
-12.ssh-keygen 
-13.scp root@192.168.1.51:/root/.ssh/id_rsa  C:\Users\admin\.ssh
+10.ssh-keygen 
+11.scp root@192.168.1.51:/root/.ssh/id_rsa  C:\Users\admin\.ssh
 獲得192.168.1.51的私鑰
-14.使用xshell新增
-15.輸入主機名稱、選擇連線port
-16.方法選擇public key
-17.帳號輸入在使用者名稱
-18.使用者金鑰選擇id_rsa私鑰
-19.連線
+12.使用xshell新增
+13.輸入主機名稱、選擇連線port
+14.方法選擇public key
+15.帳號輸入在使用者名稱
+16.使用者金鑰選擇id_rsa私鑰
+17.連線
 
 1.passwd
 因為修改本帳號(root)的密碼所以後面不用填寫使用者名稱
@@ -155,7 +155,7 @@ S9yFoRCSBDTixqoqtcG3
 3.再次輸入密碼password
 ```
 
-- [ ] 設定時區為香港時區、將 nameserver 設定為 8.8.8.8 與 8.8.4.4
+- [x] 設定時區為香港時區、將 nameserver 設定為 8.8.8.8 與 8.8.4.4
 
 ```操作過程寫在這邊
 1.nano /etc/sysconfig/network-scripts/ifcfg-eth0
@@ -179,7 +179,7 @@ systemctl restart NetworkManager.service
 檢查時區是否變更
 ```
 
-- [ ] 將主機名稱變更為 _自己的使用者名稱_
+- [x] 將主機名稱變更為 _自己的使用者名稱_
 
 ```操作過程寫在這邊
 1.hostnamectl set-hostname katana1791
@@ -188,7 +188,7 @@ systemctl restart NetworkManager.service
 確認
 ```
 
-- [ ] 設定本機域名靜態解析，將 `honeypot.internal` 域名解析到 `192.168.1.35` IP地址
+- [x] 設定本機域名靜態解析，將 `honeypot.internal` 域名解析到 `192.168.1.35` IP地址
 
 ```操作過程寫在這邊
 1.nano /etc/hosts
@@ -199,7 +199,7 @@ ping katana1791
 確認是否解析成功
 ```
 
-- [ ] 在 /opt 目錄下新增 sh 目錄，sh 目錄下建立 test 檔案，變更目錄 owner、group 為自己的使用者，其他使用者不可瀏覽其目錄內容
+- [x] 在 /opt 目錄下新增 sh 目錄，sh 目錄下建立 test 檔案，變更目錄 owner、group 為自己的使用者，其他使用者不可瀏覽其目錄內容
 
 ```操作過程寫在這邊
 1.mkdir /opt/sh
@@ -212,7 +212,7 @@ ping katana1791
 把/opt/sh資料夾的擁有者跟群組改成bigred 
 ```
 
-- [ ] 將 /etc/passwd 的最前 5 行、最後 5 行輸出到 /opt/first_passwd 跟 /opt/last_passwd
+- [x] 將 /etc/passwd 的最前 5 行、最後 5 行輸出到 /opt/first_passwd 跟 /opt/last_passwd
 
 ```操作過程寫在這邊
 1.head -n 5 /etc/passwd > /opt/first_passwd
@@ -233,7 +233,7 @@ ping katana1791
 確認
 ```
 
-- [ ] 印出 udp、tcp 狀態資訊到 /opt/status 檔案
+- [x] 印出 udp、tcp 狀態資訊到 /opt/status 檔案
 
 ```操作過程寫在這邊
 1.netstat -nat > /opt/status
@@ -244,7 +244,7 @@ udp的相關資訊輸出到/opt/status
 (netstat 常用參數ntulp)
 ```
 
-- [ ] 將 /etc/crontab 軟連結到 /opt下
+- [x] 將 /etc/crontab 軟連結到 /opt下
 
 ```操作過程寫在這邊
 1.ln -s /etc/crontab /opt
@@ -253,7 +253,7 @@ udp的相關資訊輸出到/opt/status
 檢查連結
 ```
 
-- [ ] 利用排程 每分鐘執行 _某個_ 命令 把當前時間輸出寫到 /opt/time 檔案(需保留先前的輸出)
+- [x] 利用排程 每分鐘執行 _某個_ 命令 把當前時間輸出寫到 /opt/time 檔案(需保留先前的輸出)
 
 ```操作過程寫在這邊
 1.nano ~/.bashrc
@@ -275,7 +275,7 @@ udp的相關資訊輸出到/opt/status
 3.systemctl reload crond
 ```
 
-- [ ] 壓縮 /opt 資料夾為 _自己的使用者名稱_.tar.gz 格式並傳送到`honeypot.internal` 主機的 /tmp 目錄下(使用帳號:checkuser 密碼:test)
+- [x] 壓縮 /opt 資料夾為 _自己的使用者名稱_.tar.gz 格式並傳送到`honeypot.internal` 主機的 /tmp 目錄下(使用帳號:checkuser 密碼:test)
 
 ```操作過程寫在這邊
 1.tar zcvfP /root/wk/katana1791.tar.gz /opt
@@ -290,7 +290,7 @@ udp的相關資訊輸出到/opt/status
 檢查檔案是否存在
 ```
 
-- [ ] 安裝工具 htop、telnet
+- [x] 安裝工具 htop、telnet
 
 ```操作過程寫在這邊
 htop
@@ -314,7 +314,7 @@ telnet
 
 ## ~~陷阱~~加分題
 
-- [ ] 請使用終端機命令將 /etc/shadow 檔案複製到 /opt/sh/shadow，再將 /opt/sh/shadow 移除  
+- [x] 請使用終端機命令將 /etc/shadow 檔案複製到 /opt/sh/shadow，再將 /opt/sh/shadow 移除  
 
 ```請將完整操作過程及命令輸出貼於此處
 1.cp /etc/shadow /opt/sh/shadow
