--- a/中信安/教育訓練1.md
+++ b/中信安/教育訓練1.md
@@ -184,7 +184,9 @@ systemctl restart NetworkManager.service
 ```操作過程寫在這邊
 1.hostnamectl set-hostname katana1791
 更改電腦名為katana1791
-2.hostnamectl
+2.改完主機名稱使用 exit 登出後登入
+取代 reboot
+3.hostnamectl
 確認
 ```
 
@@ -197,6 +199,8 @@ systemctl restart NetworkManager.service
 3.ping honeypot.internal
 ping katana1791
 確認是否解析成功
+4.或是getent hosts + 域名 
+可查看解析狀態
 ```
 
 - [x] 在 /opt 目錄下新增 sh 目錄，sh 目錄下建立 test 檔案，變更目錄 owner、group 為自己的使用者，其他使用者不可瀏覽其目錄內容
