--- a/中信安/教育訓練1.md
+++ b/中信安/教育訓練1.md
@@ -61,7 +61,7 @@ IPV6_AUTOCONF=no
 #Port 22
 Port 22222
 (port 22 可先刪除註解避免修改錯誤無法登入、增加空port 22222)
-(注意，scp 也走22port)
+(注意，scp 預設也走22port)
 3.nano /etc/sysconfig/selinux
 4.修改SELINUX=enforcing
 為SELINUX=disabled
